// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`amplify-form-section spec: Render logic -> should render a form section with a default button of \`Submit\` 1`] = `
<amplify-form-section>
  <!---->
  <form>
    <amplify-section>
      <div>
        <slot-fb name="amplify-form-section-header">
          <div class="amplify-ui--section-header css-1oug79q">
            <h3>
              Amplify
            </h3>
          </div>
        </slot-fb>
      </div>
      <div>
        <slot-fb name="amplify-form-section-footer">
          <div class="amplify-ui--section-footer css-ejevcw">
            <amplify-button type="submit">
              Submit
            </amplify-button>
          </div>
        </slot-fb>
      </div>
    </amplify-section>
  </form>
</amplify-form-section>
`;

exports[`amplify-form-section spec: Render logic -> should render a form section with a submit button text of \`Go\` 1`] = `
<amplify-form-section submit-button-text="Go">
  <!---->
  <form>
    <amplify-section>
      <div>
        <slot-fb name="amplify-form-section-header">
          <div class="amplify-ui--section-header css-1oug79q">
            <h3>
              Amplify
            </h3>
          </div>
        </slot-fb>
      </div>
      <div>
        <slot-fb name="amplify-form-section-footer">
          <div class="amplify-ui--section-footer css-ejevcw">
            <amplify-button type="submit">
              Go
            </amplify-button>
          </div>
        </slot-fb>
      </div>
    </amplify-section>
  </form>
</amplify-form-section>
`;

exports[`amplify-form-section spec: Render logic -> should render without Emotion CSS classes when style override is true 1`] = `
<amplify-form-section override-style="true">
  <!---->
  <form>
    <amplify-section overridestyle="">
      <div>
        <slot-fb name="amplify-form-section-header">
          <div class="amplify-ui--section-header">
            <h3>
              Amplify
            </h3>
          </div>
        </slot-fb>
      </div>
      <div>
        <slot-fb name="amplify-form-section-footer">
          <div class="amplify-ui--section-footer">
            <amplify-button overridestyle="" type="submit">
              Submit
            </amplify-button>
          </div>
        </slot-fb>
      </div>
    </amplify-section>
  </form>
</amplify-form-section>
`;
